Fixed z-index for proj info and slider counter

--- a/src/sass/pages/_project.scss
+++ b/src/sass/pages/_project.scss
@@ -39,7 +39,7 @@
 		position: fixed;
 		bottom: 0;
 		right: 0;
-		z-index: 1;
+		z-index: 999;
 
 		font-family: $maria;
 
@@ -155,6 +155,7 @@
 .showcase {
 	@include e(info) {
 		position: fixed;
+		z-index: 999;
 		left: 0;
 		bottom: 0;
 	}
